--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "puppeteer-vercel",
   "version": "1.0.0",
   "description": "working Puppeteer on Vercel example",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
